--- a/css/login.css
+++ b/css/login.css
@@ -5,7 +5,7 @@
 p {
     color: black;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 1.2vw;
+    font-size: 1em;
 }
 
 .labelText {
@@ -13,17 +13,17 @@ p {
     font-family: 'Times New Roman',
         Times,
         serif;
-    font-size: 1.2vw;
+    font-size: 1em;
 }
 
 #subtitle {
-    font-size: 2vw;
+    font-size: 1.5em;
 }
 
 h2 {
     color: black;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 3vw;
+    font-size: 2.5em;
     color: #551aa0;
 }
 
