--- a/css/login.css
+++ b/css/login.css
@@ -50,12 +50,10 @@ a {
 
 #typeEmailX {
     border: none;
-    background-color: white;
-    color: white;
+    background-color: #e8f0fe;
 }
 
 #typePasswordX {
     border: none;
-    background-color: white;
-    color: white;
+    background-color: #e8f0fe;
 }
