--- a/css/secondPage.css
+++ b/css/secondPage.css
@@ -6,55 +6,86 @@
 .container {
   height: 100vh;
   display: grid;
-  grid-template-rows: 15% 15% 70%;
+  grid-template-rows: max-content max-content max-content;
 }
 
-.navbar{
+.navbar {
   height: 15vh;
   display: grid;
-  grid-template-columns: 85% 15%;
+  grid-template-columns: 15% 70% 15%;
   align-items: center;
-  background-color: red;
 }
 
-.name{    
-  grid-column: 1/3;
-  grid-row: 1;
+.one {
+  grid-column: 1;
+}
+
+.one>span {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  text-decoration: none;
+  color: #551a8b;
+}
+
+.name {
   text-align: center;
 }
 
-.logo{
+.logo {
   text-decoration: none;
   font-size: 5vh;
 }
 
-.login{
-  grid-column: 2/3;
+.login {
+  grid-column: 3/4;
   grid-row: 1;
 }
-      
+
+.login>a {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  text-decoration: none;
+}
+
 
 #CategoryHeading {
-  justify-content: center;
-  text-justify: center;
-  text-align: center;
-  background-color: #cda0ff; 
-  text-align: center;
+  margin-left: 12%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
 
 #categories {
-display: grid;
-background-color: yellow;
-grid-template-rows: repeat(3,33.33%) ;
-grid-template-columns: repeat(2, 50%);
-align-items: center;
-justify-items: center;
-row-gap: 10px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  align-items: center;
+  justify-items: center;
 }
 
-#categories > a > button{
-  background-color: #cda0ff;
-  width:120px;
-  height:50px;
-  text-align:center;
+#categories>a {
+  text-decoration: none;
+  display: flex;
+  background-color: #cca0ff9d;
+  width: 42vw;
+  height: 21vh;
+  border-radius: 1.5rem;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.1em;
+  margin-bottom: 2rem;
+}
+
+.b1, .b3, .b5 {
+  margin-left: 1.5vw;
+}
+
+.b2, .b4, .b6 {
+  margin-right: 1.5vw;
+}
+
+.material-icons-round{
+  margin-right: .5rem;
 }
