--- a/css/thirdPage.css
+++ b/css/thirdPage.css
@@ -1,28 +1,52 @@
-.mainbody{
+* {
     margin: 0;
+    padding: 0;
+  }
+  
+  .container {
+    height: 100vh;
     display: grid;
-    height: max-content;
-}
-
-.navbar{
+    grid-template-rows: max-content max-content max-content;
+  }
+  
+  .navbar {
     height: 15vh;
     display: grid;
-    grid-template-columns: 85% 15%;
+    grid-template-columns: 15% 70% 15%;
     align-items: center;
-}
+  }
+  
+  .one {
+    grid-column: 1;
+  }
+  
+  .one>span {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    text-decoration: none;
+    color: #551a8b;
+  }
+  
+  .name {
+    text-align: center;
+  }
+  
+  .logo {
+    text-decoration: none;
+    font-size: 5vh;
+  }
+  
+  .login {
+    grid-column: 3/4;
+    grid-row: 1;
+  }
+  
+  .login>a {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    text-decoration: none;
+  }
 
-    .name{    
-        grid-column: 1/3;
-        grid-row: 1;
-        text-align: center;
-    }
-
-    .logo{
-        text-decoration: none;
-        font-size: 5vh;
-    }
-
-    .login{
-        grid-column: 2/3;
-        grid-row: 1;
-    }
+  
