--- a/css/copypage.css
+++ b/css/copypage.css
@@ -2,7 +2,7 @@
     margin: 0;
 }
 
-.mainbody{
+.mainbody {
     margin: 0;
     display: grid;
     height: 100vh;
@@ -11,45 +11,54 @@
     grid-template-rows: max-content max-content;
 }
 
-.navbar{
+.navbar {
     height: 15vh;
     display: grid;
     grid-template-columns: 15% 70% 15%;
     align-items: center;
-    
+
 }
-    .one{
-        grid-column: 1;
-    }
 
-    .one > span {
-        display: flex;
-        justify-content: right;
-        align-items: center;
-        text-decoration: none;
-        color: #551a8b;
-    }
+.one {
+    grid-column: 1;
+}
 
-    .name{    
-        text-align: center;
-    }
+.one>span {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    text-decoration: none;
+    color: #551a8b;
+}
 
-    .logo{
-        text-decoration: none;
-        font-size: 5vh;
-    }
+.name {
+    text-align: center;
+}
 
-    .login{
-        grid-column: 3/4;
-        grid-row: 1;
-    }
+.logo {
+    text-decoration: none;
+    font-size: 5vh;
+}
 
-    .login > a {
-        display: flex;
-        justify-content: left;
-        align-items: center;
-        text-decoration: none;
-    }
+.logo:link {
+    color: #551a8b;
+}
+
+.t1 {
+    color: #551a8b;
+}
+
+.login {
+    grid-column: 3/4;
+    grid-row: 1;
+}
+
+.login>a {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    text-decoration: none;
+}
 
 .copybox {
     display: grid;
@@ -58,28 +67,33 @@
     grid-template-rows: max-content auto;
 }
 
-    #myInput{
-        margin-top: 1rem;
-        display: flex;
-        border: none;
-        height: 40vh;
-        width: 40vh;
-        align-self: baseline;
-        padding: 2rem;
-        padding-top: 3rem;
-        border-radius: 1rem;
-        background-color: rgba(137, 43, 226, 0.267);
-    }
+#myInput {
+    margin-top: 1rem;
+    display: flex;
+    border: none;
+    height: 40vh;
+    width: 40vh;
+    align-self: baseline;
+    padding: 2rem;
+    padding-top: 3rem;
+    border-radius: 1rem;
+    background-color: rgba(137, 43, 226, 0.267);
+}
 
-    .copybutton{
-        margin-top: .3rem;
-    }
+.copybutton {
+    margin-top: .3rem;
+}
 
-    .copybutton > button {
-        background-color: rgba(69, 146, 108, 0.877);
-        color: white;
-        width: 49vh;
-        border: none;
-        height: 2rem;
-        border-radius: 1rem;
-    }
+.copybutton>button {
+    background-color: rgba(69, 146, 108, 0.877);
+    color: white;
+    width: 49vh;
+    border: none;
+    height: 2rem;
+    border-radius: 1rem;
+}
+
+* {
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 500;
+}
