--- a/css/firstPage.css
+++ b/css/firstPage.css
@@ -14,6 +14,7 @@
     display: grid;
     grid-template-columns: 85% 15%;
     align-items: center;
+    color: #551a8b;
 }
 
 .name {
@@ -25,6 +26,14 @@
 .logo {
     text-decoration: none;
     font-size: 5vh;
+}
+
+.logo:link {
+    color: #551a8b;
+}
+
+.t1 {
+    color: #551a8b;
 }
 
 .login {
@@ -46,7 +55,7 @@
     padding-top: 3rem;
 }
 
-.t1 {
+.t2 {
     font-size: 5vh;
     font-weight: 500;
     text-align: center;
@@ -54,7 +63,7 @@
     margin-right: 2%;
 }
 
-.t2 {
+.t3 {
     padding-top: 2.5rem;
     font-size: 3vh;
     text-align: center;
@@ -69,16 +78,35 @@
 
 .b1,
 .b2 {
-    background-color: #b779ff;
+    background-color: #b879ffce;
     border: none;
-    padding: 15px 32px;
+    padding: 20px 38px;
     border-radius: 2rem;
     text-align: center;
     margin: .8rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 
     text-decoration: none;
-    color: rgb(243, 243, 243);
+    color: rgba(243, 243, 243, 0.95);
     font-weight: lighter;
-    font-size: 1rem;
+    font-size: 1.2rem;
+
+    box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+    transition: all 0.3s ease-in-out;
+}
+
+/* .b2{
+    color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(250, 246, 255, 0.329);
+    outline: #b779ff;
+} */
+
+.b1:hover, .b2:hover{
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    transform: scale(1.03, 1.03);
+}
+
+* {
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 500;
 }
