--- a/css/secondPage.css
+++ b/css/secondPage.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Times New Roman', Times, serif;
 }
 
 .container {
@@ -15,6 +14,14 @@
   display: grid;
   grid-template-columns: 15% 70% 15%;
   align-items: center;
+}
+
+.logo:link{
+  color: #551a8b;
+}
+
+.t1{
+  color: #551a8b;
 }
 
 .one {
@@ -96,4 +103,9 @@ a:link, a:visited,  a:hover, a:active
 {
     color: #000000;
     text-decoration: none;
+}
+
+*{
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 500;
 }
