--- a/css/secondPage.css
+++ b/css/secondPage.css
@@ -64,6 +64,10 @@
   display: flex;
   justify-content: left;
   align-items: center;
+  font-size: 28px;
+  opacity: 50%;
+
+  font-family: 'EB Garamond', serif;
 }
 
 #categories {
@@ -83,8 +87,10 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  font-size: 1.1em;
+  font-size: 1.5em;
   margin-bottom: 2rem;
+  color:white;
+  font-weight: 500;
 }
 
 .b1, .b3, .b5 {
@@ -97,6 +103,7 @@
 
 .material-icons-round{
   margin-right: .5rem;
+  font-size: 1.25em
 }
 
 a:link, a:visited,  a:hover, a:active
