--- a/css/firstPage.css
+++ b/css/firstPage.css
@@ -20,12 +20,12 @@
 .name {
     grid-column: 1/3;
     grid-row: 1;
-    text-align: center;
+    margin: auto;
 }
 
 .logo {
     text-decoration: none;
-    font-size: 5vh;
+    font-size: 3rem;
 }
 
 .logo:link {
@@ -34,6 +34,7 @@
 
 .t1 {
     color: #551a8b;
+    font-size: 200px;
 }
 
 .login {
@@ -109,4 +110,9 @@
 * {
     font-family: 'Times New Roman', Times, serif;
     font-weight: 500;
+}
+
+#new {
+    font-size: 1.8rem;
+    opacity: 75%;
 }
