--- a/css/thirdPage.css
+++ b/css/thirdPage.css
@@ -43,7 +43,7 @@
 
 .logo {
   text-decoration: none;
-  font-size: 5vh;
+  font-size: 3rem;
 }
 
 .login {
@@ -70,3 +70,4 @@
   font-family: 'Times New Roman', Times, serif;
   font-weight: 500;
 }
+
