--- a/css/copypage.css
+++ b/css/copypage.css
@@ -123,3 +123,8 @@
     box-shadow: 0 1px 2px rgba(0,0,0,0.5);
     transition: all 0.3s ease-in-out;
 }
+
+#new , #new2{
+    font-size: 1.8rem;
+    opacity: 75%;
+  }
