--- a/css/firstPage.css
+++ b/css/firstPage.css
@@ -104,6 +104,7 @@
 
 .b1:hover, .b2:hover{
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    background-color: #cca0ff;
     transform: scale(1.03, 1.03);
 }
 
