--- a/css/secondPage.css
+++ b/css/secondPage.css
@@ -80,7 +80,7 @@
 #categories>a {
   text-decoration: none;
   display: flex;
-  background-color: #cca0ff9d;
+  background-color: #cca0ffad;
   width: 42vw;
   height: 21vh;
   border-radius: 1.5rem;
@@ -91,6 +91,15 @@
   margin-bottom: 2rem;
   color:white;
   font-weight: 500;
+
+  box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+  transition: all 0.3s ease-in-out;
+}
+
+#categories>a:hover{
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+  background-color: #cca0ffdc;
+  transform: scale(1.03, 1.03);
 }
 
 .b1, .b3, .b5 {
@@ -99,11 +108,6 @@
 
 .b2, .b4, .b6 {
   margin-right: 1.5vw;
-}
-
-.material-icons-round{
-  margin-right: .5rem;
-  font-size: 1.25em
 }
 
 a:link, a:visited,  a:hover, a:active
