--- a/css/copypage.css
+++ b/css/copypage.css
@@ -23,6 +23,10 @@
     grid-column: 1;
 }
 
+.one:hover{
+    cursor: pointer;
+}
+
 .one>span {
     display: flex;
     justify-content: right;
@@ -82,22 +86,37 @@
 
 .copybutton {
     margin-top: .3rem;
+    padding: 35px 38px;
+
 }
 
-.copybutton>button {
+.copybutton a:hover{
+    cursor: pointer;
+}
+
+/* .copybutton>button {
     background-color: rgba(69, 146, 108, 0.877);
     color: white;
     width: 49vh;
     border: none;
     height: 2rem;
     border-radius: 1rem;
-}
 
-* {
+    border: none;
+    padding: 20px 38px;
+    border-radius: 2rem;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+    
+} */
+
+/* * {
     font-family: 'Times New Roman', Times, serif;
     font-weight: 500;
-}
+} */
 
+/*from first page*/
 .buttons {
     display: grid;
     justify-content: center;
@@ -105,11 +124,10 @@
     padding-top: 2.5rem;
 }
 
-.b1,
-.b2 {
-    background-color: #b879ffce;
+.b1 {
+    background-color: rgba(69, 146, 108, 0.877);
     border: none;
-    padding: 20px 38px;
+    padding: 10px 32px;
     border-radius: 2rem;
     text-align: center;
     margin: .8rem;
@@ -118,7 +136,7 @@
     text-decoration: none;
     color: rgba(243, 243, 243, 0.95);
     font-weight: lighter;
-    font-size: 1.2rem;
+    font-size: 1.0rem;
 
     box-shadow: 0 1px 2px rgba(0,0,0,0.5);
     transition: all 0.3s ease-in-out;
