--- a/css/secondPage.css
+++ b/css/secondPage.css
@@ -103,7 +103,7 @@
 
 .material-icons-round{
   margin-right: .5rem;
-  font-size: 1.25em
+  font-size: 1.25em;
 }
 
 a:link, a:visited,  a:hover, a:active
