--- a/css/secondPage.css
+++ b/css/secondPage.css
@@ -130,3 +130,36 @@ a:link, a:visited,  a:hover, a:active
   font-size: 1.8rem;
   opacity: 75%;
 }
+
+/*footer*/
+
+footer{
+
+  display: grid;
+  grid-row: 3;
+  width: 100vw;
+  background-color: white;
+  position: fixed;
+  bottom: 0px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+footer div{
+  justify-self: center;
+  font-size: 1.2em;
+}
+
+i{
+  padding-bottom: 5px;
+  justify-content: center;
+  color: lightgrey;
+}
+
+footer p{
+  justify-self: center;
+}
+
+#extraspace{
+  padding-top: 100px;
+}
