--- a/css/firstPage.css
+++ b/css/firstPage.css
@@ -13,6 +13,7 @@
     height: 15vh;
     display: grid;
     grid-template-columns: 85% 15%;
+    grid-template-rows: auto 0em;
     align-items: center;
     color: #551a8b;
 }
@@ -21,6 +22,11 @@
     grid-column: 1/3;
     grid-row: 1;
     margin: auto;
+}
+
+#profileDropDown {
+    grid-column: 2/3;
+    grid-row: 2;
 }
 
 .logo {
@@ -92,7 +98,7 @@
     font-weight: lighter;
     font-size: 1.2rem;
 
-    box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     transition: all 0.3s ease-in-out;
 }
 
@@ -102,8 +108,9 @@
     outline: #b779ff;
 } */
 
-.b1:hover, .b2:hover{
-    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+.b1:hover,
+.b2:hover {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     background-color: #cca0ff;
     transform: scale(1.03, 1.03);
 }
@@ -120,25 +127,21 @@
 
 /*footer*/
 
-footer{
+footer {
     display: grid;
     bottom: 0;
-    position:absolute;
+    position: absolute;
     justify-self: center;
     padding-bottom: 15px;
 }
 
-i{
+i {
     padding-bottom: 19px;
     justify-content: center;
     color: lightgrey;
 }
-footer div{
+
+footer div {
     font-size: 1.4em;
     justify-self: center;
 }
-
-
-
-
-
