--- a/css/secondPage.css
+++ b/css/secondPage.css
@@ -13,19 +13,25 @@
   height: 15vh;
   display: grid;
   grid-template-columns: 15% 70% 15%;
+  grid-template-rows: auto 0em;
   align-items: center;
 }
 
-.logo:link{
+#profileDropDown {
+  grid-column: 3/4;
+  grid-row: 2;
+}
+
+.logo:link {
   color: #551a8b;
 }
 
-.t1{
+.t1 {
   color: #551a8b;
 }
 
 .one {
-  grid-column: 1; 
+  grid-column: 1;
   cursor: pointer;
 }
 
@@ -89,44 +95,51 @@
   justify-content: center;
   font-size: 1.5em;
   margin-bottom: 2rem;
-  color:white;
+  color: white;
   font-weight: 500;
 
-  box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
   transition: all 0.3s ease-in-out;
 }
 
-#categories>a:hover{
-  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+#categories>a:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   background-color: #cca0ffdc;
   transform: scale(1.03, 1.03);
 }
 
-.b1, .b3, .b5 {
+.b1,
+.b3,
+.b5 {
   margin-left: 1.5vw;
 }
 
-.b2, .b4, .b6 {
+.b2,
+.b4,
+.b6 {
   margin-right: 1.5vw;
 }
 
-.material-icons-round{
+.material-icons-round {
   margin-right: .5rem;
   font-size: 1.25em;
 }
 
-a:link, a:visited,  a:hover, a:active
-{
-    color: #000000;
-    text-decoration: none;
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #000000;
+  text-decoration: none;
 }
 
-*{
+* {
   font-family: 'Times New Roman', Times, serif;
   font-weight: 500;
 }
 
-#new , #new2{
+#new,
+#new2 {
   font-size: 1.8rem;
   opacity: 75%;
 }
