--- a/css/copypage.css
+++ b/css/copypage.css
@@ -15,15 +15,21 @@
     height: 15vh;
     display: grid;
     grid-template-columns: 15% 70% 15%;
+    grid-template-rows: auto 0em;
     align-items: center;
 
+}
+
+#profileDropDown {
+    grid-column: 3/4;
+    grid-row: 2;
 }
 
 .one {
     grid-column: 1;
 }
 
-.one:hover{
+.one:hover {
     cursor: pointer;
 }
 
@@ -90,7 +96,7 @@
 
 }
 
-.copybutton a:hover{
+.copybutton a:hover {
     cursor: pointer;
 }
 
@@ -138,18 +144,19 @@
     font-weight: lighter;
     font-size: 1.0rem;
 
-    box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     transition: all 0.3s ease-in-out;
 }
 
-#new , #new2{
+#new,
+#new2 {
     font-size: 1.8rem;
     opacity: 75%;
-  }
+}
 
-  /*footer*/
+/*footer*/
 
-footer{
+footer {
 
     display: grid;
     grid-row: 3;
@@ -160,22 +167,22 @@ footer{
     padding-top: 5px;
     padding-bottom: 5px;
 }
-  
-footer div{
+
+footer div {
     justify-self: center;
     font-size: 1.2em;
 }
 
-i{
+i {
     padding-bottom: 5px;
     justify-content: center;
     color: lightgrey;
 }
 
-footer p{
+footer p {
     justify-self: center;
 }
 
-#extraspace{
+#extraspace {
     padding-top: 100px;
 }
