--- a/css/global.css
+++ b/css/global.css
@@ -33,3 +33,21 @@
     width: 6em;
     z-index: 2;
 }
+
+* {
+    border: red 1px solid;
+}
+
+html,
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+@media only screen and (max-width: 800px) {
+    #profileDropDown {
+        margin-left: -4em;
+        margin-top: 2em;
+    }
+
+}
