--- a/css/secondPage.css
+++ b/css/secondPage.css
@@ -57,6 +57,11 @@
   display: flex;
   justify-content: left;
   align-items: center;
+  font-size: 28px;
+  opacity: 50%;
+
+  font-family: 'EB Garamond', serif;
+  
 }
 
 #categories {
@@ -70,13 +75,15 @@
   text-decoration: none;
   display: flex;
   background-color: #cca0ff9d;
+  color: white;
+  font-weight: 500;
   width: 42vw;
   height: 21vh;
   border-radius: 1.5rem;
   text-align: center;
   align-items: center;
   justify-content: center;
-  font-size: 1.1em;
+  font-size: 1.5em;
   margin-bottom: 2rem;
 }
 
@@ -90,6 +97,7 @@
 
 .material-icons-round{
   margin-right: .5rem;
+  font-size: 1.25em
 }
 
 a:link, a:visited,  a:hover, a:active
