--- a/css/global.css
+++ b/css/global.css
@@ -26,7 +26,7 @@
 }
 
 #profileDropDown {
-    background-color: blue;
+    background-color: whitesmoke;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     margin-right: 3em;
