--- a/css/thirdPage.css
+++ b/css/thirdPage.css
@@ -119,13 +119,33 @@
 
 /*moves the radio buttons to the right*/
 aside div{
-  padding-top: 8px;
-  margin-left: 70%;
+  padding: 8px;
+  color:#551a8b;
 }
 
 /*filter button*/
 #preferences{
   float: right;
+}
+
+/*clear filter*/
+#clearFilters{
+  background-color: #551a8b;
+  color: white;
+  padding: 3px;
+  border-radius: 5px;
+}
+
+/*drop down for filter*/
+#profileDropDownz {
+  background-color: whitesmoke;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  margin-left: 70%;
+  width: 6em;
+  z-index: 2;
+
+  font-size: 19px;
 }
 
 /*footer*/
