changed opacity in login/logout button

--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,7 @@
 #dropDownViewProfile,
 #dropDownLogout {
     background-color: #551a8b;
+    opacity: 50%;
     border: none;
     padding: 4px;
     font-family: Verdana,
