--- a/css/thirdPage.css
+++ b/css/thirdPage.css
@@ -128,12 +128,32 @@ aside div{
   float: right;
 }
 
+#filterstitle{
+  display: flex;
+  justify-content: center;
+  opacity: 80%;
+}
+
+#line{
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  opacity: 50%;
+  width: 75%;
+  border-bottom: 1px #551a8b solid;
+  margin-bottom: 2px;
+}
+
 /*clear filter*/
 #clearFilters{
+  margin: auto;
+  margin-top: 15px;
+  display: flex;
   background-color: #551a8b;
   color: white;
   padding: 3px;
   border-radius: 5px;
+  justify-self: center;
 }
 
 /*drop down for filter*/
@@ -141,8 +161,9 @@ aside div{
   background-color: whitesmoke;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  margin-left: 70%;
-  width: 6em;
+  margin-top: 5px;
+  margin-left: 65%;
+  width: 7em;
   z-index: 2;
 
   font-size: 19px;
